Replacing usage of URL class with URI where equals comparisons are used