@@ -2,6 +2,8 @@ package edu.kit.scc.dem.wapsrv.model.formats;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.*;
 import java.util.regex.Pattern;
@@ -40,11 +42,11 @@ public final class JsonLdFormatter extends AbstractFormatter {
     /**
      * The default JSON-LD Profile
      */
-    public static final URL DEFAULT_PROFILE = makeUrl("http://www.w3.org/ns/anno.jsonld");
+    public static final URI DEFAULT_PROFILE = makeUri("http://www.w3.org/ns/anno.jsonld");
     /**
      * The LDP profile for containers
      */
-    public static final URL LDP_PROFILE = makeUrl("http://www.w3.org/ns/ldp.jsonld");
+    public static final URI LDP_PROFILE = makeUri("http://www.w3.org/ns/ldp.jsonld");
     /**
      * The string identifying JSON-LD
      */
@@ -52,7 +54,7 @@ public final class JsonLdFormatter extends AbstractFormatter {
     /**
      * The set of used profiles
      */
-    private final Set<URL> profiles = new HashSet<>();
+    private final Set<URI> profiles = new HashSet<>();
     /**
      * The profile registry
      */
@@ -78,8 +80,24 @@ public final class JsonLdFormatter extends AbstractFormatter {
      */
     private static URL makeUrl(String urlString) {
         try {
-            return new java.net.URL(urlString);
-        } catch (java.net.MalformedURLException e) {
+            return new URL(urlString);
+        } catch (MalformedURLException e) {
+            LoggerFactory.getLogger(ContentNegotiator.class).error("DEFAULT_PROFILE is an invalid URL : " + urlString);
+            return null;
+        }
+    }
+
+    /**
+     * This is a helper method necessary to be able to use a static URL,
+     * otherwise the exception can not be caught.
+     *
+     * @param urlString The String to generate a URL from
+     * @return The generated URL Object
+     */
+    private static URI makeUri(String urlString) {
+        try {
+            return new URI(urlString);
+        } catch (URISyntaxException e) {
             LoggerFactory.getLogger(ContentNegotiator.class).error("DEFAULT_PROFILE is an invalid URL : " + urlString);
             return null;
         }
@@ -210,7 +228,7 @@ public final class JsonLdFormatter extends AbstractFormatter {
                 jsonObject = JsonLdProcessor.frame(jsonObject, frameObject, options);
 
                 // Collect contexts from profiles
-                for (URL url : profiles) {
+                for (URI url : profiles) {
                     contexts.add(url.toString());
                 }
 
@@ -228,7 +246,7 @@ public final class JsonLdFormatter extends AbstractFormatter {
                     }
                 }
             }
-            for (URL url : profiles) {
+            for (URI url : profiles) {
                 contexts.add(url.toString());
             }
             contexts = deduplicateContexts(contexts);
@@ -335,7 +353,7 @@ public final class JsonLdFormatter extends AbstractFormatter {
                 for (String profile : profiles) {
                     String trimmedProfile = profile.trim();
                     try {
-                        URL url = new URL(trimmedProfile);
+                        URI url = new URI(trimmedProfile);
                         // At least a valid url, but is it locally cached?
                         // We do not support uncached profiles. Inform the registry we need it cached.
                         if (profileRegistry.cacheProfile(url)) {
@@ -344,7 +362,7 @@ public final class JsonLdFormatter extends AbstractFormatter {
                         } else {
                             logger.debug("Skipping not reachable profile : " + url);
                         }
-                    } catch (MalformedURLException e) {
+                    } catch (URISyntaxException e) {
                         // not a valid url, this is an error
                         logger.error("Malformed URL in JSON-LD Profile : " + trimmedProfile);
                     }
@@ -394,7 +412,7 @@ public final class JsonLdFormatter extends AbstractFormatter {
             return getFormatString();
         }
         StringBuilder profileString = new StringBuilder();
-        for (URL url : profiles) {
+        for (URI url : profiles) {
             String context = url.toString();
             if (!profileString.isEmpty()) {
                 profileString.append(" ");
